--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "dev": "webpack-dev-server --open --config ./config/webpack.config.js"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
+    "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
